fix: overflow on scroll

--- a/src/constant/style.css
+++ b/src/constant/style.css
@@ -10,6 +10,9 @@ body {
     color: black
 }
 
+.play {
+    padding-left: 10%;
+}
 
 .container {
     height: 100%;
@@ -88,7 +91,6 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-left: 10%;
     z-index: 10;
     box-shadow: 0px 1px 5px 1px;
 }
@@ -106,6 +108,10 @@ img {
     color: white
 }
 
+.title {
+    padding-left: 10%;
+}
+
 .playlist {
     z-index: 10;
     display: flex;
@@ -113,7 +119,7 @@ img {
     height: 50vh;
     width: 30%;
     background-color: black;
-    box-shadow: 2px 0px 5px 2px rgba(62, 0, 66, 1);
+    box-shadow: 0px 0px 5px 1px rgba(33, 0, 33, 1);
     border-radius: 10px;
     padding: 10px;
     margin-top: 10px;
@@ -162,7 +168,6 @@ p {
 
 @media screen and (max-width: 600px) {
     .main {
-        margin-top: 40px;
         color: #2D232E;
         display: flex;
         flex-direction: column;
@@ -183,7 +188,7 @@ p {
         flex-direction: column;
         height: 69vh;
         width: 80%;
-        background-color: black;
+        background-color: rgb(0, 0, 0);
         box-shadow: 0px 0px 5px 1px rgba(33, 0, 33, 1);
         border-radius: 10px;
         padding: 10px;
